# MT

./: .buildinfo  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.html  README.md  TODO.html  TODO.md  build.sh  genindex.html  index.html  mt_build.sh  objects.inv  rpc-demo.html  search.html  searchindex.js
.autogen/: demo_service.pb.cc  demo_service.pb.h
.doctrees/: README.doctree  TODO.doctree  environment.pickle  index.doctree  rpc-demo.doctree
.github/workflows/: documentation.yaml
3rd/: CMakeLists.txt
3rd/protobuf-2.6.1/: Makefile  config.status
3rd/protobuf-2.6.1/gtest/: Makefile
3rd/protobuf-2.6.1/include/google/protobuf/: descriptor.pb.h
3rd/protobuf-2.6.1/lib/: libprotobuf-lite.la
3rd/protobuf-2.6.1/lib/mac/: libprotobuf-lite.lai  libprotobuf.9.dylib  libprotobuf.lai  libprotoc.la  libprotoc.lai  protoc
3rd/protobuf-2.6.1/lib/pkgconfig/: protobuf.pc
3rd/protobuf-2.6.1/src/: libprotoc.la
3rd/protobuf-2.6.1/src/.libs/: libprotobuf-lite.so.9  protoc
3rd/protobuf-2.6.1/src/google/protobuf/: descriptor.proto  wire_format.h
3rd/protobuf-3.20.3/include/google/protobuf/: any_test.pb.h  map_lite_unittest.pb.h  map_proto2_unittest.pb.h  map_unittest.pb.h  unittest.pb.h  unittest_arena.pb.h  unittest_custom_options.pb.h  unittest_drop_unknown_fields.pb.h  unittest_embed_optimize_for.pb.h  unittest_empty.pb.h  unittest_import.pb.h  unittest_import_lite.pb.h  unittest_import_public.pb.h  unittest_import_public_lite.pb.h  unittest_lazy_dependencies.pb.h  unittest_lazy_dependencies_custom_option.pb.h  unittest_lazy_dependencies_enum.pb.h  unittest_lite.pb.h  unittest_lite_imports_nonlite.pb.h  unittest_mset.pb.h  unittest_mset_wire_format.pb.h  unittest_no_field_presence.pb.h  unittest_no_generic_services.pb.h  unittest_optimize_for.pb.h  unittest_preserve_unknown_enum.pb.h  unittest_proto3.pb.h  (+6 more)
_sources/: TODO.md.txt  index.rst.txt  rpc-demo.md.txt
cmake/: mtConfig.cmake  mtConfigVersion.cmake
docs/: README.md  conf.py  rpc-demo.md
include/mt/: call_stack.h  event_loop.h  exception.h  gather.h  handle.h  result.h  runner.h  scheduled_task.h  sleep.h  task.h  void_value.h  wait_for.h
include/mt/concept/: awaitable.h  future.h  promise.h  schedulable.h
include/mt/net/: addrinfo_guard.h  connect.h  server.h  stream.h
include/mt/selector/: event.h  selector.h  selector_epoll.h  selector_kqueue.h
include/mt/util/: macro.h  macros.h  noncopyable.h  singleton.h
rpc/: CMakeLists.txt
rpc/config/: client_log.cfg
rpc/demo/: CMakeLists.txt  build.sh  conn_mgr.cpp  conn_mgr.h  demo_service_impl.cpp  demo_service_impl.h  rpc_channel.cpp  rpc_channel.h  rpc_client_mgr.h  rpc_coro_mgr.cpp  rpc_coro_mgr.h  rpc_server.cpp  rpc_server.h  rpc_service_mgr.cpp  rpc_service_mgr.h
rpc/demo/client/: client.cpp
rpc/demo/protocol/common/: demo.proto  error_code.proto
rpc/demo/server/: server.cpp  server2.cpp
rpc/demo/src/: conn_mgr.cpp  conn_mgr.h  demo_service_impl.cpp  demo_service_impl.h  echo_service_impl.cpp  echo_service_impl.h  macros.h  rpc_channel.cpp  rpc_channel.h  rpc_coro_mgr.cpp  rpc_coro_mgr.h  rpc_server.cpp  rpc_server.h  rpc_service_mgr.cpp  rpc_service_mgr.h
rpc/demo/src/client/: client.cpp
rpc/demo/src/server/: server.cpp  server2.cpp
rpc/protobuf-2.6.1/: libtool
rpc/protobuf-2.6.1/gtest/: config.status  libtool
rpc/protobuf-2.6.1/lib/: libprotobuf.la  libprotoc.la
rpc/protobuf-2.6.1/lib/mac/: libprotobuf-lite.dylib  libprotobuf-lite.la  libprotobuf.la  libprotoc.9.dylib
rpc/protobuf-2.6.1/lib/pkgconfig/: protobuf-lite.pc
rpc/protobuf-2.6.1/lib/win/x64/: libprotobuf-lite.lib
rpc/protobuf-2.6.1/lib/win/x86/: libprotobuf-lite.lib  libprotobuf-lited.lib
rpc/protobuf-2.6.1/src/: Makefile
rpc/protobuf-2.6.1/src/.libs/: libprotobuf.so.9.0.1  libprotoc.so.9  lt-protoc
rpc/protobuf-2.6.1/src/google/protobuf/: descriptor.cc  descriptor.pb.cc
rpc/protobuf-2.6.1/src/google/protobuf/.deps/: descriptor.Plo  descriptor.pb.Plo  extension_set.Plo  message.Plo  message_lite.Plo  text_format.Plo  wire_format.Plo
rpc/protobuf-2.6.1/src/google/protobuf/compiler/: parser.cc
rpc/protobuf-2.6.1/src/google/protobuf/compiler/.deps/: code_generator.Plo  parser.Plo  plugin.Plo  subprocess.Plo
rpc/protobuf-2.6.1/src/google/protobuf/compiler/cpp/.deps/: cpp_enum.Plo  cpp_field.Plo  cpp_generator.Plo  cpp_message.Plo  cpp_primitive_field.Plo  cpp_string_field.Plo
rpc/protobuf-2.6.1/src/google/protobuf/compiler/java/.deps/: java_context.Plo  java_doc_comment.Plo  java_enum.Plo  java_enum_field.Plo  java_file.Plo  java_generator.Plo  java_lazy_message_field.Plo  java_message.Plo  java_message_field.Plo  java_name_resolver.Plo  java_service.Plo  java_shared_code_generator.Plo
rpc/protobuf-2.6.1/src/google/protobuf/compiler/python/.deps/: python_generator.Plo
rpc/protobuf-2.6.1/src/google/protobuf/io/.deps/: gzip_stream.Plo  zero_copy_stream_impl.Plo  zero_copy_stream_impl_lite.Plo
rpc/protobuf-2.6.1/src/google/protobuf/stubs/.deps/: atomicops_internals_x86_msvc.Plo  common.Plo  once.Plo  structurally_valid.Plo  strutil.Plo
rpc/protocol/common/: demo.proto  demo_service.proto  error_code.proto
rpc/protocol/inner/: cmd.proto  demo_service.m.pb.cc  demo_service.m.pb.h  demo_service.proto  rpc_options.proto
rpc/rpc-demo/: CMakeLists.txt
rpc/rpc-demo/log/cfg/: server_log.cfg
rpc/rpc-demo/src/: conn_mgr.cpp  conn_mgr.h  rpc_channel.cpp  rpc_channel.h  rpc_client_mgr.cpp  rpc_client_mgr.h  rpc_coro_mgr.cpp  rpc_coro_mgr.h  rpc_service_mgr.cpp  rpc_service_mgr.h
rpc/rpc-demo/src/client/: client.cpp
rpc/rpc-demo/src/server/: server.cpp
rpc/tools/: CMakeLists.txt
rpc/tools/protoc_co_plugin/: CMakeLists.txt  main.cc  pb_co_code_generator.cc  pb_co_code_generator.h
src/: event_loop.cc
test/: CMakeLists.txt
test/function/: CMakeLists.txt  echo_client.cc  echo_server.cc  hello_world.cc  test_fmt.cc  test_task.cc
test/functional/: CMakeLists.txt  functional_test.cc
test/stress/: CMakeLists.txt  stress_test.cc
test/unit/: CMakeLists.txt  counted.h  test_result.cc  test_selector.cc  test_task.cc
(+53 files in other folders)
